--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="John Doe" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="https://kdf9000.github.io/css/main.min.f90f5edd436ec7b74ad05479a05705770306911f721193e7845948fb07fe1335.css" />
+    <link rel="stylesheet" href="#ZgotmplZ" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -17,14 +17,14 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Is this a recursion?	https://kdf9000.github.io/" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://kdf9000.github.io/404.html" />
+<meta property="og:url" content="htpps://kdf9000.github.io/404.html" />
 
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="https://kdf9000.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
+      <a href="htpps://kdf9000.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
       <h1>CK_D</h1>
       <p>Is this a recursion?	https://kdf9000.github.io/</p>
       <div class="app-header-social">
